--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "crypto": "^1.0.1",
     "express": "^4.16.3",
     "express-jwt": "^5.3.1",
-    "express-session": "~1.14.1",
+    "express-session": "^1.15.6",
     "glob": "^7.1.2",
     "if-env": "^1.0.4",
     "jsonwebtoken": "^8.3.0",
